# JEPA-WordEmergence

./: .gitignore  README.md  main.py  pyproject.toml
dataset/: convert.py  dataset.py  generator.py
game/: Othello.md  othello.py
models/: gpt.py  jepa.py  trainer.py
